--- a/src/app/shared/species-page/species-page.component.html
+++ b/src/app/shared/species-page/species-page.component.html
@@ -1,1 +1,98 @@
-<p>species-page works!</p>
+<div class="h-screen">
+    <div class="container mx-auto py-20 flex flex-wrap relative h-screen">
+      <div *ngFor="let specie of species" 
+           class="cursor-pointer transition-all duration-500 hover:translate-y-2 w-72 h-40 bg-neutral-50 rounded-lg shadow-xl flex flex-row items-center justify-evenly gap-4 px-4 mr-4">
+        <div>
+          <img src="https://media.istockphoto.com/id/1145393791/vector/farm-animals-sign.jpg?s=612x612&w=0&k=20&c=TkDlbOcvUb6d7jGpZtmzlFNqYhPNGiakfPVnJCL9H6c=" alt="Species Image" />
+        </div>
+        <div>
+          <span class="font-bold text-purple-300">{{specie.name}}</span>
+          <p class="line-clamp-3">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+      </div>
+
+      <div class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6 absolute bottom-4 right-4 w-full">
+        <div class="flex flex-1 justify-between sm:hidden">
+          <!-- Version mobile -->
+          <button
+            [disabled]="currentPage === 0"
+            (click)="onPageChange(currentPage - 1)"
+            class="relative inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
+            [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === 0}"
+          >
+            Previous
+          </button>
+          <button
+            [disabled]="currentPage === totalPages - 1"
+            (click)="onPageChange(currentPage + 1)"
+            class="relative ml-3 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
+            [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === totalPages - 1}"
+          >
+            Next
+          </button>
+        </div>
+      
+        <!-- Version desktop -->
+        <div class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between">
+          <div>
+            <p class="text-sm text-gray-700">
+              Total
+              <span class="font-medium">{{ currentPage * pageSize + 1 }}</span>
+              to
+              <span class="font-medium">{{ Math.min((currentPage + 1) * pageSize, totalElements) }}</span>
+              of
+              <span class="font-medium">{{ totalElements }}</span>
+              <!-- results -->
+            </p>
+          </div>
+          
+          <div>
+            <nav class="isolate inline-flex -space-x-px rounded-md shadow-sm" aria-label="Pagination">
+              <!-- Bouton Previous -->
+              <button
+                [disabled]="currentPage === 0"
+                (click)="onPageChange(currentPage - 1)"
+                class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0"
+                [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === 0}"
+              >
+                <span class="sr-only">Previous</span>
+                <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
+                </svg>
+              </button>
+      
+              <!-- Numéros de page -->
+              <ng-container *ngFor="let page of visiblePages">
+                <button
+                  (click)="onPageChange(page)"
+                  class="relative inline-flex items-center px-4 py-2 text-sm font-semibold focus:z-20"
+                  [ngClass]="{
+                    'bg-blue-600 text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600': currentPage === page,
+                    'text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:outline-offset-0': currentPage !== page
+                  }"
+                >
+                  {{ page + 1 }}
+                </button>
+              </ng-container>
+      
+              <!-- Bouton Next -->
+              <button
+                [disabled]="currentPage === totalPages - 1"
+                (click)="onPageChange(currentPage + 1)"
+                class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0"
+                [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === totalPages - 1}"
+              >
+                <span class="sr-only">Next</span>
+                <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
