--- a/src/app/shared/podium/podium.component.html
+++ b/src/app/shared/podium/podium.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="flex justify-center gap-8 mt-24 ">
+<div class="flex justify-center gap-8 mt-24 ">
     <div
       class="group relative block max-w-screen-sm h-64 sm:h-80 lg:h-96"
     >
@@ -32,16 +32,5 @@
 
     
   </div>
-   -->
+  
 
-<div class="mt-40">
-  <div>
-    <h2>combineLatest Example</h2>
-    <p>Latest values from observables:</p>
-    <ul>
-        <li *ngFor="let pair of combinedValues">
-            {{ pair[0] }} - {{ pair[1] }}
-        </li>
-    </ul>
-</div>
-</div>
