--- a/src/app/components/Competitions/competition/competition.component.html
+++ b/src/app/components/Competitions/competition/competition.component.html
@@ -48,7 +48,7 @@
             
             <td class="px-6 py-4">{{competition.maxParticipants}}</td>
             <td class="flex items-center px-6 py-4">
-              <button for="my_modal_7" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button>
+              <button (click)="onEdit(competition)" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button>
               <button (click)="onDelete(competition.id)" class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">Remove</button>
             </td>
           </tr>
@@ -138,32 +138,12 @@
   
     </div>
 </div>
-<!-- 
-<label
-onclick="my_modal_4.showModal()" class="btn"
-  title="Add New"
-  class="group cursor-pointer outline-none hover:rotate-90 duration-300 absolute right-4 "
->
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    width="50px"
-    height="50px"
-    viewBox="0 0 24 24"
-    class="stroke-zinc-400 fill-none group-hover:fill-zinc-800 group-active:stroke-zinc-200 group-active:fill-zinc-600 group-active:duration-0 duration-300"
-  >
-    <path
-      d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z"
-      stroke-width="1.5"
-    ></path>
-    <path d="M8 12H16" stroke-width="1.5"></path>
-    <path d="M12 16V8" stroke-width="1.5"></path>
-  </svg>
-</label> -->
 
 <div>
 
 </div>
 
 <app-create-competition/>
-
+<app-update-competition
+/>
 </body>
