Implementation de ngRX

--- a/src/app/components/Hunts/create-hunt/create-hunt.component.html
+++ b/src/app/components/Hunts/create-hunt/create-hunt.component.html
@@ -1,1 +1,50 @@
-<p>create-hunt works!</p>
+<!-- Modal -->
+<input type="checkbox" class="modal" />
+<div class="modal" role="dialog">
+  <div class="modal-box">
+    <h3 class="text-lg font-bold">Create a new Species</h3>
+
+    <form>
+      <!-- Name -->
+      <div class="flex flex-col pt-4">
+        <input
+          type="text"
+          class="w-full border-gray-300 bg-white py-2 px-4 text-base placeholder-gray-400 focus:outline-none"
+          placeholder="Species Name"
+        />
+      </div>
+
+      <!-- Minimum Weight -->
+      <div class="flex flex-col pt-4">
+        <input
+          type="number"
+          class="w-full border-gray-300 bg-white py-2 px-4 text-base placeholder-gray-400 focus:outline-none"
+          placeholder="Minimum Weight"
+        />
+      </div>
+
+
+      <!-- Points -->
+      <div class="flex flex-col pt-4">
+        <input
+          type="text"
+          class="w-full border-gray-300 bg-white py-2 px-4 text-base placeholder-gray-400 focus:outline-none"
+          placeholder="Participation"
+        />
+  
+      </div>
+
+      <!-- Actions -->
+      <div class="modal-action">
+        <button
+          type="submit"
+          class="btn bg-lime-800 text-white hover:bg-lime-600"
+        >
+          Save
+        </button>
+        <label for="my_modal_6" class="btn" >Close</label>
+      </div>
+    </form>
+
+  </div>
+</div>
