--- a/src/app/components/Hunts/hunt/hunt.component.html
+++ b/src/app/components/Hunts/hunt/hunt.component.html
@@ -1,1 +1,58 @@
-<p>hunt works!</p>
+<body class="relative bg-zinc-50 overflow-hidden h-screen flex">
+    <div class="container mx-auto py-12 relative py-20 ">
+      <div>
+        <label
+        (onClick) = "openAddModel()"
+        class="btn"
+        title="Add New"
+        class="group cursor-pointer text-lime-700 hover:text-green-600 backdrop-blur-lg bg-gradient-to-tr from-transparent via-[rgba(121,121,121,0.16)] to-transparent rounded-md py-2 px-6 shadow hover:shadow-green-600 duration-700"
+    
+      >
+        Add a new Hunt
+      </label>
+    
+      </div>
+      
+        <div class="shadow-md sm:rounded-lg">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+              <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <tr>
+                  
+                  <th scope="col" class="px-6 py-3">Species Name</th>
+                  <th scope="col" class="px-6 py-3">weight</th>
+                  <th scope="col" class="px-6 py-3">participationId</th>
+                  <th scope="col" class="px-6 py-3"></th>
+              </thead>
+              <tbody *ngIf="HuntList.length > 0; else noData">
+                <tr
+                  *ngFor="let hunt of HuntList"
+                  class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
+                >
+                
+                <td class="px-6 py-4">{{ hunt.speciesname }}</td>
+
+                  <td class="px-6 py-4">{{ hunt.weight }}</td>
+                  <td class="px-6 py-4">{{ hunt.participationId }}</td>
+                  <td class="flex items-center px-6 py-4">
+                    <button class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">
+                      Remove
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="flex items-center justify-between border-t border-gray-200 px-4 py-3 sm:px-6">
+                    <button (click)="previousPage()" [disabled]="currentPage.value === 0">Previous</button>
+                    <span>Page {{ currentPage.value + 1 }} of {{ totalPages }}</span>
+                    <button (click)="nextPage()" [disabled]="currentPage.value === totalPages - 1">Next</button>
+            </div>
+        
+            <!-- Display no data message if speciesList is empty -->
+            <ng-template #noData>
+              <p class="text-center py-4">No species data available.</p>
+            </ng-template>
+          </div>
+    </div>
+  
+    <!-- <app-create-hunt /> -->
+  </body>
