--- a/src/app/shared/podium/podium.component.html
+++ b/src/app/shared/podium/podium.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center gap-8 mt-24 ">
+<div class="flex justify-center gap-8 mt-24 " *ngFor="let podium of PodiumList">
     <div
       class="group relative block max-w-screen-sm h-64 sm:h-80 lg:h-96"
     >
@@ -11,20 +11,20 @@
           class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8"
         >
         <svg xmlns="http://www.w3.org/2000/svg" width="4em" height="4em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="#07461f" d="M12 11.385q-1.237 0-2.119-.882T9 8.385t.881-2.12T12 5.386t2.119.88t.881 2.12t-.881 2.118t-2.119.882m-7 6.192v-.608q0-.619.36-1.158q.361-.54.97-.838q1.416-.679 2.834-1.018q1.417-.34 2.836-.34t2.837.34t2.832 1.018q.61.298.97.838q.361.539.361 1.158v.608q0 .44-.299.74q-.299.298-.74.298H6.04q-.441 0-.74-.299t-.3-.74m1 .039h12v-.647q0-.332-.215-.625q-.214-.292-.593-.494q-1.234-.598-2.546-.916T12 14.616t-2.646.318t-2.546.916q-.38.202-.593.494Q6 16.637 6 16.97zm6-7.231q.825 0 1.413-.588T14 8.384t-.587-1.412T12 6.384t-1.412.588T10 8.384t.588 1.413t1.412.587m0 7.232"/></svg>
-          <h2 class="mt-4 text-xl font-medium sm:text-2xl">Go around the world</h2>
+          <h2 class="mt-4 text-xl font-medium sm:text-2xl">{{podium.userName}}</h2>
         </div>
     
         <div
           class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8"
         >
-          <h3 class="mt-4 text-xl font-medium sm:text-2xl">Go around the world</h3>
+          <h3 class="mt-4 text-xl font-medium sm:text-2xl">{{podium.competitionLocation}}</h3>
     
           <p class="mt-4 text-sm sm:text-base">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate,
             praesentium voluptatem omnis atque culpa repellendus.
           </p>
     
-          <p class="mt-8 font-bold">Read more</p>
+          <p class="mt-8 font-bold">{{podium.score}}</p>
         </div>
       </div>
     </div>
