--- a/src/app/components/Speciess/species/species.component.html
+++ b/src/app/components/Speciess/species/species.component.html
@@ -1,4 +1,4 @@
-<body class="relative bg-zinc-50 overflow-hidden max-h-screen flex">
+<!-- <body class="relative bg-zinc-50 overflow-hidden max-h-screen flex">
   <app-side/>
   <div class="container mx-auto py-12 relative py-20 ">
     <div>
@@ -31,7 +31,7 @@
                 <th scope="col" class="px-6 py-3"></th>
             </thead>
             <tbody>
-              <!-- Use *ngFor to iterate over speciesList and display each row -->
+
               <tr *ngFor="let species of speciesList" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                 <td class="w-4 p-4">
                   <div class="flex items-center">
@@ -48,8 +48,6 @@
                 <td class="px-6 py-4">{{ species.points }}</td>
                 <td class="flex items-center px-6 py-4">
                   <button (click)="onEdit(species)" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button>
-
-                  <!-- <button onclick="my_modal_1.showModal()" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button> -->
                   <button (click)="onDelete(species.id)" class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">Remove</button>
                 </td>
               </tr>
@@ -57,7 +55,7 @@
           </table>
           <div class="flex items-center justify-between border-t border-gray-200 px-4 py-3 sm:px-6">
             <div class="flex flex-1 justify-between sm:hidden">
-              <!-- Version mobile -->
+
               <button
                 [disabled]="currentPage === 0"
                 (click)="onPageChange(currentPage - 1)"
@@ -76,23 +74,18 @@
               </button>
             </div>
           
-            <!-- Version desktop -->
             <div class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between">
               <div>
                 <p class="text-sm text-gray-700">
                   Total
-                  <!-- <span class="font-medium">{{ currentPage * pageSize + 1 }}</span>
-                  to
-                  <span class="font-medium">{{ Math.min((currentPage + 1) * pageSize, totalElements) }}</span>
-                  of -->
+                  
                   <span class="font-medium">{{ totalElements }}</span>
-                  <!-- results -->
                 </p>
               </div>
               
               <div>
                 <nav class="isolate inline-flex -space-x-px rounded-md shadow-sm" aria-label="Pagination">
-                  <!-- Bouton Previous -->
+
                   <button
                     [disabled]="currentPage === 0"
                     (click)="onPageChange(currentPage - 1)"
@@ -105,7 +98,6 @@
                     </svg>
                   </button>
           
-                  <!-- Numéros de page -->
                   <ng-container *ngFor="let page of visiblePages">
                     <button
                       (click)="onPageChange(page)"
@@ -119,7 +111,6 @@
                     </button>
                   </ng-container>
           
-                  <!-- Bouton Next -->
                   <button
                     [disabled]="currentPage === totalPages - 1"
                     (click)="onPageChange(currentPage + 1)"
@@ -136,14 +127,12 @@
             </div>
           </div>
       
-          <!-- Display no data message if speciesList is empty -->
           <ng-template #noData>
             <p class="text-center py-4">No species data available.</p>
           </ng-template>
         </div>
   </div>
 
-  <!-- Modal button -->
   
   <app-create-species (speciesAdded)="loadSpecies()"/>
   <app-update-species 
@@ -151,4 +140,155 @@
   (speciesUpdated)="loadSpecies()"
 ></app-update-species>
 
+</body> -->
+
+<body class="relative bg-zinc-50 overflow-hidden max-h-screen flex">
+  <app-side/>
+  <div class="container mx-auto py-12 relative py-20">
+    <div>
+      <label
+        for="my_modal_6"
+        class="btn group cursor-pointer text-lime-700 hover:text-green-600 backdrop-blur-lg bg-gradient-to-tr from-transparent via-[rgba(121,121,121,0.16)] to-transparent rounded-md py-2 px-6 shadow hover:shadow-green-600 duration-700"
+      >
+        Add a new Species
+      </label>
+    </div>
+
+    <ng-container *ngIf="loading$ | async">
+      <div class="flex justify-center items-center py-4">
+        <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-gray-900"></div>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="error$ | async as error">
+      <div class="text-red-500 bg-red-100 p-4 rounded-md mb-4">
+        {{ error }}
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="speciesList$ | async as speciesList">
+      <div class="shadow-md sm:rounded-lg" *ngIf="speciesList.length > 0; else noData">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+          <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+            <tr>
+              <th scope="col" class="p-4">
+                <div class="flex items-center">
+                  <input id="checkbox-all-search" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  <label for="checkbox-all-search" class="sr-only">checkbox</label>
+                </div>
+              </th>
+              <th scope="col" class="px-6 py-3">Species Name</th>
+              <th scope="col" class="px-6 py-3">Category</th>
+              <th scope="col" class="px-6 py-3">Minimum Weight</th>
+              <th scope="col" class="px-6 py-3">difficulty</th>
+              <th scope="col" class="px-6 py-3">Points</th>
+              <th scope="col" class="px-6 py-3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let species of speciesList" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+              <td class="w-4 p-4">
+                <div class="flex items-center">
+                  <input id="checkbox-table-search-1" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                  <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                </div>
+              </td>
+              <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                {{ species.name }}
+              </td>
+              <td class="px-6 py-4">{{ species.category }}</td>
+              <td class="px-6 py-4">{{ species.minimumWeight }}</td>
+              <td class="px-6 py-4">{{ species.difficulty }}</td>
+              <td class="px-6 py-4">{{ species.points }}</td>
+              <td class="flex items-center px-6 py-4">
+                <button (click)="onEdit(species)" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</button>
+                <button  class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">Remove</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="flex items-center justify-between border-t border-gray-200 px-4 py-3 sm:px-6">
+          <div class="flex flex-1 justify-between sm:hidden">
+            <button
+              [disabled]="currentPage === 0"
+              (click)="onPageChange(currentPage - 1)"
+              class="relative inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
+              [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === 0}"
+            >
+              Previous
+            </button>
+            <button
+              [disabled]="currentPage === totalPages - 1"
+              (click)="onPageChange(currentPage + 1)"
+              class="relative ml-3 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
+              [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === totalPages - 1}"
+            >
+              Next
+            </button>
+          </div>
+
+          <div class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between">
+            <div>
+              <p class="text-sm text-gray-700">
+                Total
+                <span class="font-medium">{{ totalElements }}</span>
+              </p>
+            </div>
+            
+            <div>
+              <nav class="isolate inline-flex -space-x-px rounded-md shadow-sm" aria-label="Pagination">
+                <button
+                  [disabled]="currentPage === 0"
+                  (click)="onPageChange(currentPage - 1)"
+                  class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0"
+                  [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === 0}"
+                >
+                  <span class="sr-only">Previous</span>
+                  <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
+                  </svg>
+                </button>
+
+                <ng-container *ngFor="let page of visiblePages">
+                  <button
+                    (click)="onPageChange(page)"
+                    class="relative inline-flex items-center px-4 py-2 text-sm font-semibold focus:z-20"
+                    [ngClass]="{
+                      'bg-blue-600 text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600': currentPage === page,
+                      'text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:outline-offset-0': currentPage !== page
+                    }"
+                  >
+                    {{ page + 1 }}
+                  </button>
+                </ng-container>
+
+                <button
+                  [disabled]="currentPage === totalPages - 1"
+                  (click)="onPageChange(currentPage + 1)"
+                  class="relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0"
+                  [ngClass]="{'opacity-50 cursor-not-allowed': currentPage === totalPages - 1}"
+                >
+                  <span class="sr-only">Next</span>
+                  <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                  </svg>
+                </button>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+
+    <ng-template #noData>
+      <p class="text-center py-4">No species data available.</p>
+    </ng-template>
+  </div>
+
+  <app-create-species (speciesAdded)="loadSpecies()"/>
+  <app-update-species 
+    [species]="selectedSpecies" 
+    (speciesUpdated)="loadSpecies()"
+  ></app-update-species>
 </body>
